--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "python ./sample/core.py",
+            "command": "python3 ./sample/core.py",
             "group": {
                 "kind": "build",
                 "isDefault": true
